# morfSync

./: .gitattributes  .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  LICENSE  README.fr.md  README.md  ROADMAP.md  config.example.json  service.json
cmake/toolchains/: linux-aarch64.cmake
docs/: GUIDE_DEBUTANT.md  INSTALLATION.md  sync-contract.md
scripts/linux/: homeserverhub.service  install-service.sh  morfsync.service  update-service.sh
scripts/windows/: install-service.ps1
src/: main.cpp
src/app/: config.cpp  config.h  paths.cpp  paths.h
src/net/: beacon.cpp  beacon.h  http_server.cpp  http_server.h
src/sync/: change.h  change_store.cpp  change_store.h
test/: smoke_main.cpp
